Made everything more responsive and tables are no longer cutting off for mobile

--- a/docs/dark.css
+++ b/docs/dark.css
@@ -342,15 +342,16 @@ body.sticky .sidebar-toggle {
   border: 1px solid #ddd;
   padding: 6px 13px;
   color: #fff;
-  min-width: 130px;
+  /* min-width: 130px; */
 }
 
 #one,
 #two {
   display: inline-block;
-  width: 600px;
+  width: 500px;
   padding: 1rem;
   vertical-align: top;
+  margin: auto;
 }
 .markdown-section tr {
   border-top: 1px solid #ccc;
@@ -416,7 +417,24 @@ body.close .content {
     display: none;
   }
 }
-@media screen and (max-width: 768px) {
+
+@media only screen and (max-width: 564px) {
+  .markdown-section td,
+  .markdown-section th {
+    max-width: 100px;
+    font-size: 10px;
+  }
+  #one,
+  #two {
+    padding: 0px;
+    left: 110px;
+  }
+  .markdown-section table {
+    margin-left: -190px;
+  }
+}
+
+@media screen and (max-width: 858px) {
   .github-corner,
   .sidebar,
   .sidebar-toggle {
